try to write a website

--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -1,10 +1,18 @@
 <html>
     <head>
-        
+        <title>Yifan Huang</title>
 
+      
     </head>
 
     <body>
+        <h1> Welcome!</h1>
+        <h3>A smaller sub heading</h3>
+
+        <p>Some content</p>
+        <!--comments-->
+        <img scr="https://avatars.githubusercontent.com/u/45568837?s=40&v=4">
+
 
     </body>
 </html>
