--- a/personalWebsite/index.html
+++ b/personalWebsite/index.html
@@ -10,8 +10,11 @@
         <h3>A smaller sub heading</h3>
 
         <p>Some content</p>
+        <p hidden="true"> Some content that I dont want to show you</p>
         <!--comments-->
-        <img scr="https://avatars.githubusercontent.com/u/45568837?s=40&v=4">
+        <img src="https://avatars.githubusercontent.com/u/45568837">
+
+        <a href="bio.html"> link to Bio </a>
 
 
     </body>
